--- a/styleguide-snappthis.css
+++ b/styleguide-snappthis.css
@@ -1,44 +1,44 @@
 /* We gebruiken hier Cascade layers, wat mogelijke problemen met Specificiteit voorkomt
    https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/Styling_basics/Cascade_layers
    https://css-tricks.com/css-cascade-layers/ */
-
+ 
 /* BARIOL REGULAR */
 @font-face {
     font-family: 'Bariol';
-    src: url('./fonts/Bariol_Regular.otf');
+    src: url('./fonts/Bariol_Regular.woff');
     font-weight: 400;
 }
-
+ 
 /* BARIOL REGULAR ITALIC */
 @font-face {
     font-family: 'Bariol';
-    src: url('./fonts/Bariol_Regular_Italic.otf');
+    src: url('./fonts/Bariol_Regular_Italic.woff');
     font-style: italic;
 }
-
+ 
 /* BARIOL BOLD */
 @font-face {
     font-family: 'Bariol';
-    src: url('./fonts/Bariol_Bold.otf');
+    src: url('./fonts/Bariol_Bold.woff');
     font-weight: 700;
 }
-
+ 
 /* BARIOL LIGHT */
 @font-face {
     font-family: 'Bariol';
-    src: url('./fonts/Bariol_Light.otf');
+    src: url('./fonts/Bariol_Light.woff');
     font-weight: 300;
 }
-
+ 
 /* BARIOL THIN */
 @font-face {
     font-family: 'Bariol';
-    src: url('./fonts/Bariol_Thin.otf');
+    src: url('./fonts/Bariol_Thin.woff');
     font-weight: 200;
 }
-
+ 
 @layer styleguide {
-
+ 
     /* Kleuren */
     :root {
         --primary-color: #172F3B;
@@ -46,44 +46,56 @@
         --secondary-action: #00FF44;
         --white: #FFFFFF;
         --grey-background: #E9ECEE;
-
+ 
         /* TEXT */
         --primary-text-color: #FFFFFF;
         --secondary-text-color: #90A1AA;
-
+ 
+        /* TYPOGRAPHY */
+        --font-family: 'Bariol', sans-serif;
+ 
         /* FONT-SIZE */
         --first-line: 2em;
         --second-line: 1.6em;
         --description: 1.8em;
-
-        --font-family: 'Bariol', sans-serif;
-
+ 
         --letter-spacing: 1px;
-        --line-height-list: 1.4;
-        --line-height-text: 1.;
-
-
-        /* BUTTON */
+        --line-height-list: 1.6;
+        --line-height-text: 1.3;
+ 
+        /* BORDER */
         --border-none: none;
         --border-radius-button: 50px;
         --border-radius-photo: 7px;
-
+ 
         /* BUTTON SIZE MOET NOG BESPROKEN WORDEN*/
-
-
-        --letter-spacing: 1px;
-
-
-
-paddingbutton
-
-
-
+        --padding-button: ;
+        --button-size: ;
     }
-
-    /* Typografie */
-
-
-    /* Formulier elementen */
-
+ 
+.primary-color {
+  background-color: var(--primary-color);
+}
+ 
+.primary-action {
+  background-color: var(--primary-action);
+}
+ 
+.secondary-action {
+  background-color: var(--secondary-action);
+}
+ 
+.white {
+  background-color: var(--white);
+  border: 1px solid #000000; /* zodat je de witte kleur nog kunt zien */
+}
+ 
+.grey-background {
+  background-color: var(--grey-background);
+}
+ 
+}
+ 
+*{
+    font-family: var(--font-family);
 }
